--- a/shop/templates/registration/signup.html
+++ b/shop/templates/registration/signup.html
@@ -38,6 +38,14 @@
     var idDuplicationChecker = false;
     var fd = {};
     fd['csrfmiddlewaretoken'] = $.csrf_token;
+    $.ajaxSetup({
+    crossDomain: false, // obviates need for sameOrigin test
+    beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", fd['csrfmiddlewaretoken');
+        }
+    }
+});
     function idDuplicationCheck(){
        var username = $("#id_username").val();
        $.ajax({
