--- a/shop/templates/registration/signup.html
+++ b/shop/templates/registration/signup.html
@@ -35,7 +35,7 @@
 </div>
 
 <script>
-    var csrftoken = {{ csrf_token }};
+    var csrftoken = '{{ csrf_token }}';
     var idDuplicationChecker = false;
 
      $.ajaxSetup({
