--- a/shop/templates/registration/signup.html
+++ b/shop/templates/registration/signup.html
@@ -29,7 +29,7 @@
             <div id="loginBtn">
 
                 <input type="button" id="checkBtn" onclick="checkSubmit()" value="회원가입" />
-                <input type="button" id="submitBtn" value="회원가입" style="display: none;" />
+                <input type="submit" id="submitBtn" value="회원가입" style="display: none;" />
 
             </div>
         </form>
